# C-Algorithms-comparing

./: .gitignore  CMakeLists.txt  DFS.cpp  DFS.hpp  Dijkstra.cpp  Dijkstra.hpp  Graph.cpp  Graph.hpp  ParalellLeftTriangleIntegralSolver.cpp  ParalellLeftTriangleIntegralSolver.hpp  ParalellTrapezoidalIntegralSolver.cpp  ParalleITrapezoidalIntegralSolver.hpp  ParallelITrapezoidalIntegralSolver.hpp  ParallelLeftTriangleIntegralSolver.cpp  ParallelLeftTriangleIntegralSolver.hpp  ParallelTrapezoidalIntegralSolver.cpp  README.md  ThreadSafeQueue.hpp  integral.cpp  integral.hpp  integral_helpfuncs.cpp  integral_helpfuncs.hpp  leftRectangleIntegralSolver.cpp  leftRectangleIntegralSolver.hpp  main.cpp  parser.cpp  parser.hpp  trapezoidalIntegralSolver.cpp  trapezoidalIntegralSolver.hpp
